--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -3536,13 +3536,475 @@
         state: absent
       register: test_four
 
-    - name: "CLUSTER_TYPE 4: ASSERT - Delete"
+    - name: "NETBOX_VM_INTERFACE 4: ASSERT - Delete"
       assert:
         that:
           - test_four is changed
           - test_four['interface']['name'] == "Eth0"
           - test_four['interface']['virtual_machine'] == 1
           - test_four['msg'] == "interface Eth0 deleted"
+##
+##
+### NETBOX_PROVIDER
+##
+##
+- name: "TEST NETBOX_PROVIDER"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "NETBOX_PROVIDER 1: Create provider within Netbox with only required information"
+      netbox_provider:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: Test Provider One
+        state: present
+      register: test_one
+
+    - name: "NETBOX_PROVIDER 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['provider']['name'] == "Test Provider One"
+          - test_one['provider']['slug'] == "test-provider-one"
+          - test_one['msg'] == "provider Test Provider One created"
+
+    - name: "NETBOX_PROVIDER 2: Duplicate"
+      netbox_provider:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: Test Provider One
+        state: present
+      register: test_two
+
+    - name: "NETBOX_PROVIDER 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['provider']['name'] == "Test Provider One"
+          - test_two['provider']['slug'] == "test-provider-one"
+          - test_two['msg'] == "provider Test Provider One already exists"
+
+    - name: "NETBOX_PROVIDER 3: Update provider with other fields"
+      netbox_provider:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: Test Provider One
+          asn: 65001
+          account: "200129104"
+          portal_url: http://provider.net
+          noc_contact: noc@provider.net
+          admin_contact: admin@provider.net
+          comments: "BAD PROVIDER"
+        state: present
+      register: test_three
+
+    - name: "NETBOX_PROVIDER 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['asn'] == 65001
+          - test_three['diff']['after']['account'] == "200129104"
+          - test_three['diff']['after']['portal_url'] == "http://provider.net"
+          - test_three['diff']['after']['noc_contact'] == "noc@provider.net"
+          - test_three['diff']['after']['admin_contact'] == "admin@provider.net"
+          - test_three['diff']['after']['comments'] == "BAD PROVIDER"
+          - test_three['provider']['name'] == "Test Provider One"
+          - test_three['provider']['slug'] == "test-provider-one"
+          - test_three['provider']['asn'] == 65001
+          - test_three['provider']['account'] == "200129104"
+          - test_three['provider']['portal_url'] == "http://provider.net"
+          - test_three['provider']['noc_contact'] == "noc@provider.net"
+          - test_three['provider']['admin_contact'] == "admin@provider.net"
+          - test_three['provider']['comments'] == "BAD PROVIDER"
+          - test_three['msg'] == "provider Test Provider One updated"
+
+    - name: "NETBOX_PROVIDER 4: Delete provider within netbox"
+      netbox_provider:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: Test Provider One
+        state: absent
+      register: test_four
+
+    - name: "NETBOX_PROVIDER 4 : ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['provider']['name'] == "Test Provider One"
+          - test_four['provider']['slug'] == "test-provider-one"
+          - test_four['provider']['asn'] == 65001
+          - test_four['provider']['account'] == "200129104"
+          - test_four['provider']['portal_url'] == "http://provider.net"
+          - test_four['provider']['noc_contact'] == "noc@provider.net"
+          - test_four['provider']['admin_contact'] == "admin@provider.net"
+          - test_four['provider']['comments'] == "BAD PROVIDER"
+          - test_four['msg'] == "provider Test Provider One deleted"
+##
+##
+### NETBOX_CIRCUIT_TYPE
+##
+##
+- name: "TEST NETBOX_CIRCUIT_TYPE"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "CIRCUIT_TYPE 1: Necessary info creation"
+      netbox_circuit_type:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Circuit Type One"
+        state: present
+      register: test_one
+
+    - name: "CIRCUIT_TYPE 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['circuit_type']['name'] == "Test Circuit Type One"
+          - test_one['circuit_type']['slug'] == "test-circuit-type-one"
+          - test_one['msg'] == "circuit_type Test Circuit Type One created"
+
+    - name: "CIRCUIT_TYPE 2: Create duplicate"
+      netbox_circuit_type:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Circuit Type One"
+        state: present
+      register: test_two
+
+    - name: "CIRCUIT_TYPE 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['circuit_type']['name'] == "Test Circuit Type One"
+          - test_two['circuit_type']['slug'] == "test-circuit-type-one"
+          - test_two['msg'] == "circuit_type Test Circuit Type One already exists"
+
+    - name: "CIRCUIT_TYPE 3: User specified slug"
+      netbox_circuit_type:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Circuit Type Two"
+          slug: "test-circuit-type-2"
+        state: present
+      register: test_three
+
+    - name: "CIRCUIT_TYPE 3: ASSERT - User specified slug"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['before']['state'] == "absent"
+          - test_three['diff']['after']['state'] == "present"
+          - test_three['circuit_type']['name'] == "Test Circuit Type Two"
+          - test_three['circuit_type']['slug'] == "test-circuit-type-2"
+          - test_three['msg'] == "circuit_type Test Circuit Type Two created"
+
+    - name: "CIRCUIT_TYPE 4: ASSERT - Delete"
+      netbox_circuit_type:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Circuit Type One"
+        state: absent
+      register: test_four
+
+    - name: "CIRCUIT_TYPE 4: ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['circuit_type']['name'] == "Test Circuit Type One"
+          - test_four['circuit_type']['slug'] == "test-circuit-type-one"
+          - test_four['msg'] == "circuit_type Test Circuit Type One deleted"
+
+    - name: "CIRCUIT_TYPE 5: ASSERT - Delete"
+      netbox_circuit_type:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          name: "Test Circuit Type Two"
+          slug: "test-circuit-type-2"
+        state: absent
+      register: test_five
+
+    - name: "CIRCUIT_TYPE 5: ASSERT - Delete"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['circuit_type']['name'] == "Test Circuit Type Two"
+          - test_five['circuit_type']['slug'] == "test-circuit-type-2"
+          - test_five['msg'] == "circuit_type Test Circuit Type Two deleted"
+##
+##
+### NETBOX_CIRCUIT
+##
+##
+- name: "TEST NETBOX_CIRCUIT"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "NETBOX_CIRCUIT 1: Create provider within Netbox with only required information"
+      netbox_circuit:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          cid: Test Circuit One
+          provider: Test Provider
+          circuit_type: Test Circuit Type
+        state: present
+      register: test_one
+
+    - name: "NETBOX_CIRCUIT 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['circuit']['cid'] == "Test Circuit One"
+          - test_one['circuit']['provider'] == 1
+          - test_one['circuit']['type'] == 1
+          - test_one['msg'] == "circuit Test Circuit One created"
+
+    - name: "NETBOX_CIRCUIT 2: Duplicate"
+      netbox_circuit:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          cid: Test Circuit One
+          provider: Test Provider
+          circuit_type: Test Circuit Type
+        state: present
+      register: test_two
+
+    - name: "NETBOX_CIRCUIT 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['circuit']['cid'] == "Test Circuit One"
+          - test_two['circuit']['provider'] == 1
+          - test_two['circuit']['type'] == 1
+          - test_two['msg'] == "circuit Test Circuit One already exists"
+
+    - name: "NETBOX_CIRCUIT 3: Update provider with other fields"
+      netbox_circuit:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          cid: Test Circuit One
+          provider: Test Provider
+          circuit_type: Test Circuit Type
+          status: Planned
+          tenant: Test Tenant
+          install_date: "2018-12-25"
+          commit_rate: 10000
+          description: Test circuit
+          comments: "FAST CIRCUIT"
+        state: present
+      register: test_three
+
+    - name: "NETBOX_CIRCUIT 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['status'] == 2
+          - test_three['diff']['after']['tenant'] == 1
+          - test_three['diff']['after']['install_date'] == "2018-12-25"
+          - test_three['diff']['after']['commit_rate'] == 10000
+          - test_three['diff']['after']['description'] == "Test circuit"
+          - test_three['diff']['after']['comments'] == "FAST CIRCUIT"
+          - test_three['circuit']['cid'] == "Test Circuit One"
+          - test_three['circuit']['provider'] == 1
+          - test_three['circuit']['type'] == 1
+          - test_three['circuit']['status'] == 2
+          - test_three['circuit']['tenant'] == 1
+          - test_three['circuit']['install_date'] == "2018-12-25"
+          - test_three['circuit']['commit_rate'] == 10000
+          - test_three['circuit']['description'] == "Test circuit"
+          - test_three['circuit']['comments'] == "FAST CIRCUIT"
+          - test_three['msg'] == "circuit Test Circuit One updated"
+
+    - name: "NETBOX_CIRCUIT 4: Delete provider within netbox"
+      netbox_circuit:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          cid: Test Circuit One
+        state: absent
+      register: test_four
+
+    - name: "NETBOX_CIRCUIT 4 : ASSERT - Delete"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['circuit']['cid'] == "Test Circuit One"
+          - test_four['circuit']['provider'] == 1
+          - test_four['circuit']['type'] == 1
+          - test_four['circuit']['status'] == 2
+          - test_four['circuit']['tenant'] == 1
+          - test_four['circuit']['install_date'] == "2018-12-25"
+          - test_four['circuit']['commit_rate'] == 10000
+          - test_four['circuit']['description'] == "Test circuit"
+          - test_four['circuit']['comments'] == "FAST CIRCUIT"
+          - test_four['msg'] == "circuit Test Circuit One deleted"
+##
+##
+### NETBOX_CIRCUIT_TERMINATION
+##
+##
+- name: "TEST NETBOX_CIRCUIT_TERMINATION"
+  connection: local
+  hosts: localhost
+  gather_facts: False
+  collections:
+    - fragmentedpacket.netbox_modules
+
+  tasks:
+    - name: "NETBOX_CIRCUIT_TERMINATION 1: Create provider within Netbox with only required information"
+      netbox_circuit_termination:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          circuit: Test Circuit
+          term_side: A
+          site: "Test Site"
+          port_speed: 10000
+        state: present
+      register: test_one
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 1: ASSERT - Necessary info creation"
+      assert:
+        that:
+          - test_one is changed
+          - test_one['diff']['before']['state'] == "absent"
+          - test_one['diff']['after']['state'] == "present"
+          - test_one['circuit_termination']['circuit'] == 1
+          - test_one['circuit_termination']['term_side'] == "A"
+          - test_one['circuit_termination']['site'] == 1
+          - test_one['circuit_termination']['port_speed'] == 10000
+          - test_one['msg'] == "circuit_termination test_circuit_a created"
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 2: Duplicate"
+      netbox_circuit_termination:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          circuit: Test Circuit
+          term_side: A
+        state: present
+      register: test_two
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 2: ASSERT - Create duplicate"
+      assert:
+        that:
+          - not test_two['changed']
+          - test_two['circuit_termination']['circuit'] == 1
+          - test_two['circuit_termination']['term_side'] == "A"
+          - test_two['circuit_termination']['site'] == 1
+          - test_two['circuit_termination']['port_speed'] == 10000
+          - test_two['msg'] == "circuit_termination test_circuit_a already exists"
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 3: Update provider with other fields"
+      netbox_circuit_termination:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          circuit: Test Circuit
+          term_side: A
+          upstream_speed: 1000
+          xconnect_id: 10X100
+          pp_info: PP10-24
+          description: "Test description"
+        state: present
+      register: test_three
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 3: ASSERT - Updated"
+      assert:
+        that:
+          - test_three is changed
+          - test_three['diff']['after']['upstream_speed'] == 1000
+          - test_three['diff']['after']['xconnect_id'] == "10X100"
+          - test_three['diff']['after']['pp_info'] == "PP10-24"
+          - test_three['diff']['after']['description'] == "Test description"
+          - test_three['circuit_termination']['circuit'] == 1
+          - test_three['circuit_termination']['term_side'] == "A"
+          - test_three['circuit_termination']['site'] == 1
+          - test_three['circuit_termination']['port_speed'] == 10000
+          - test_three['circuit_termination']['upstream_speed'] == 1000
+          - test_three['circuit_termination']['xconnect_id'] == "10X100"
+          - test_three['circuit_termination']['pp_info'] == "PP10-24"
+          - test_three['circuit_termination']['description'] == "Test description"
+          - test_three['msg'] == "circuit_termination test_circuit_a updated"
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 4: Create Z Side"
+      netbox_circuit_termination:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          circuit: Test Circuit
+          term_side: Z
+          site: "Test Site"
+          port_speed: 10000
+        state: present
+      register: test_four
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 4: ASSERT - Create Z Side"
+      assert:
+        that:
+          - test_four is changed
+          - test_four['diff']['before']['state'] == "absent"
+          - test_four['diff']['after']['state'] == "present"
+          - test_four['circuit_termination']['circuit'] == 1
+          - test_four['circuit_termination']['term_side'] == "Z"
+          - test_four['circuit_termination']['site'] == 1
+          - test_four['circuit_termination']['port_speed'] == 10000
+          - test_four['msg'] == "circuit_termination test_circuit_z created"
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 5: Delete provider within netbox"
+      netbox_circuit_termination:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          circuit: Test Circuit
+          term_side: A
+        state: absent
+      register: test_five
+
+    - name: "NETBOX_CIRCUIT_TERMINATION 5: ASSERT - Delete"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['circuit_termination']['circuit'] == 1
+          - test_five['circuit_termination']['term_side'] == "A"
+          - test_five['circuit_termination']['site'] == 1
+          - test_five['circuit_termination']['port_speed'] == 10000
+          - test_five['circuit_termination']['upstream_speed'] == 1000
+          - test_five['circuit_termination']['xconnect_id'] == "10X100"
+          - test_five['circuit_termination']['pp_info'] == "PP10-24"
+          - test_five['circuit_termination']['description'] == "Test description"
+          - test_five['msg'] == "circuit_termination test_circuit_a deleted"
+
 ##
 ##
 ### NETBOX_LOOKUP
