Fix interface search to include virtual_machine key, updated tests

--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -3443,7 +3443,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
         state: present
       register: test_one
 
@@ -3453,9 +3453,9 @@
           - test_one is changed
           - test_one['diff']['before']['state'] == "absent"
           - test_one['diff']['after']['state'] == "present"
-          - test_one['interface']['name'] == "Eth0"
+          - test_one['interface']['name'] == "Eth10"
           - test_one['interface']['virtual_machine'] == 1
-          - test_one['msg'] == "interface Eth0 created"
+          - test_one['msg'] == "interface Eth10 created"
 
     - name: "NETBOX_VM_INTERFACE 2: Create duplicate"
       netbox_vm_interface:
@@ -3463,7 +3463,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
         state: present
       register: test_two
 
@@ -3471,9 +3471,9 @@
       assert:
         that:
           - not test_two['changed']
-          - test_two['interface']['name'] == "Eth0"
+          - test_two['interface']['name'] == "Eth10"
           - test_two['interface']['virtual_machine'] == 1
-          - test_two['msg'] == "interface Eth0 already exists"
+          - test_two['msg'] == "interface Eth10 already exists"
 
     - name: "NETBOX_VM_INTERFACE 3: Updated"
       netbox_vm_interface:
@@ -3481,7 +3481,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
           enabled: false
           mtu: 9000
           mac_address: "00:00:00:AA:AA:01"
@@ -3513,7 +3513,7 @@
           - test_three['diff']['after']['tagged_vlans'][0] == 2
           - test_three['diff']['after']['tagged_vlans'][1] == 3
           - test_three['diff']['after']['tags'][0] == "Schnozzberry"
-          - test_three['interface']['name'] == "Eth0"
+          - test_three['interface']['name'] == "Eth10"
           - test_three['interface']['virtual_machine'] == 1
           - test_three['interface']['enabled'] == false
           - test_three['interface']['mtu'] == 9000
@@ -3524,14 +3524,14 @@
           - test_three['interface']['tagged_vlans'][0] == 2
           - test_three['interface']['tagged_vlans'][1] == 3
           - test_three['interface']['tags'][0] == "Schnozzberry"
-          - test_three['msg'] == "interface Eth0 updated"
+          - test_three['msg'] == "interface Eth10 updated"
 
     - name: "NETBOX_VM_INTERFACE 4: ASSERT - Delete"
       netbox_vm_interface:
         netbox_url: http://localhost:32768
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
-          name: "Eth0"
+          name: "Eth10"
           virtual_machine: "test100-vm"
         state: absent
       register: test_four
@@ -3540,9 +3540,60 @@
       assert:
         that:
           - test_four is changed
-          - test_four['interface']['name'] == "Eth0"
+          - test_four['interface']['name'] == "Eth10"
           - test_four['interface']['virtual_machine'] == 1
-          - test_four['msg'] == "interface Eth0 deleted"
+          - test_four['msg'] == "interface Eth10 deleted"
+
+    - name: "NETBOX_VM_INTERFACE 5: Attempt to update interface with same name on other VMs"
+      netbox_vm_interface:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          virtual_machine: "test100-vm"
+          name: "Eth0"
+          enabled: false
+          mtu: 9000
+          mac_address: "00:00:00:AA:AA:01"
+          description: "Updated test100-vm Eth0 intf"
+          mode: Tagged
+          untagged_vlan:
+            name: Wireless
+            site: Test Site
+          tagged_vlans:
+            - name: Data
+              site: Test Site
+            - name: VoIP
+              site: Test Site
+          tags:
+            - Schnozzberry
+        state: present
+      register: test_five
+
+    - name: "NETBOX_VM_INTERFACE 5: ASSERT - Updated"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['diff']['after']['enabled'] == false
+          - test_five['diff']['after']['mtu'] == 9000
+          - test_five['diff']['after']['mac_address'] == "00:00:00:AA:AA:01"
+          - test_five['diff']['after']['description'] == "Updated test100-vm Eth0 intf"
+          - test_five['diff']['after']['mode'] == 200
+          - test_five['diff']['after']['untagged_vlan'] == 1
+          - test_five['diff']['after']['tagged_vlans'][0] == 2
+          - test_five['diff']['after']['tagged_vlans'][1] == 3
+          - test_five['diff']['after']['tags'][0] == "Schnozzberry"
+          - test_five['interface']['name'] == "Eth0"
+          - test_five['interface']['virtual_machine'] == 1
+          - test_five['interface']['enabled'] == false
+          - test_five['interface']['mtu'] == 9000
+          - test_five['interface']['mac_address'] == "00:00:00:AA:AA:01"
+          - test_five['interface']['description'] == "Updated test100-vm Eth0 intf"
+          - test_five['interface']['mode'] == 200
+          - test_five['interface']['untagged_vlan'] == 1
+          - test_five['interface']['tagged_vlans'][0] == 2
+          - test_five['interface']['tagged_vlans'][1] == 3
+          - test_five['interface']['tags'][0] == "Schnozzberry"
+          - test_five['msg'] == "interface Eth0 updated"
 ##
 ##
 ### NETBOX_PROVIDER
