bug_fix: Fixes issue with multiple results when attempting to create vm intfs (#41)

--- a/tests/integration/integration-tests.yml
+++ b/tests/integration/integration-tests.yml
@@ -313,7 +313,7 @@
           - test_five['interface']['enabled'] == false
           - test_five['interface']['form_factor'] == 1000
           - test_five['interface']['mgmt_only'] == false
-          - test_five['interface']['lag'] == 4
+          - test_five['interface']['lag'] == 14
           - test_five['interface']['mode'] == 100
           - test_five['interface']['mtu'] == 1600
 
@@ -664,6 +664,29 @@
           - not test_thirteen['changed']
           - test_thirteen['msg'] == "ip_address 192.168.100.2/24 already exists"
           - test_thirteen['ip_address']['address'] == "192.168.100.2/24"
+
+    - name: "14 - Create IP address on Eth0 - test100-vm - State: present"
+      netbox_ip_address:
+        netbox_url: http://localhost.org:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          family: 4
+          address: 10.188.1.100/24
+          interface:
+            name: Eth0
+            virtual_machine: test100-vm
+      register: test_fourteen
+
+    - name: "14 - ASSERT"
+      assert:
+        that:
+          - test_fourteen is changed
+          - test_fourteen['diff']['before']['state'] == "absent"
+          - test_fourteen['diff']['after']['state'] == "present"
+          - test_fourteen['msg'] == "ip_address 10.188.1.100/24 created"
+          - test_fourteen['ip_address']['address'] == "10.188.1.100/24"
+          - test_fourteen['ip_address']['family'] == 4
+          - test_fourteen['ip_address']['interface'] == 3
 ##
 ##
 ### NETBOX_PREFIX
@@ -3443,7 +3466,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
         state: present
       register: test_one
 
@@ -3453,9 +3476,9 @@
           - test_one is changed
           - test_one['diff']['before']['state'] == "absent"
           - test_one['diff']['after']['state'] == "present"
-          - test_one['interface']['name'] == "Eth0"
+          - test_one['interface']['name'] == "Eth10"
           - test_one['interface']['virtual_machine'] == 1
-          - test_one['msg'] == "interface Eth0 created"
+          - test_one['msg'] == "interface Eth10 created"
 
     - name: "NETBOX_VM_INTERFACE 2: Create duplicate"
       netbox_vm_interface:
@@ -3463,7 +3486,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
         state: present
       register: test_two
 
@@ -3471,9 +3494,9 @@
       assert:
         that:
           - not test_two['changed']
-          - test_two['interface']['name'] == "Eth0"
+          - test_two['interface']['name'] == "Eth10"
           - test_two['interface']['virtual_machine'] == 1
-          - test_two['msg'] == "interface Eth0 already exists"
+          - test_two['msg'] == "interface Eth10 already exists"
 
     - name: "NETBOX_VM_INTERFACE 3: Updated"
       netbox_vm_interface:
@@ -3481,7 +3504,7 @@
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
           virtual_machine: "test100-vm"
-          name: "Eth0"
+          name: "Eth10"
           enabled: false
           mtu: 9000
           mac_address: "00:00:00:AA:AA:01"
@@ -3510,10 +3533,9 @@
           - test_three['diff']['after']['description'] == "Updated test100-vm"
           - test_three['diff']['after']['mode'] == 200
           - test_three['diff']['after']['untagged_vlan'] == 1
-          - test_three['diff']['after']['tagged_vlans'][0] == 2
-          - test_three['diff']['after']['tagged_vlans'][1] == 3
+          - test_three['diff']['after']['tagged_vlans'] == [2, 3]
           - test_three['diff']['after']['tags'][0] == "Schnozzberry"
-          - test_three['interface']['name'] == "Eth0"
+          - test_three['interface']['name'] == "Eth10"
           - test_three['interface']['virtual_machine'] == 1
           - test_three['interface']['enabled'] == false
           - test_three['interface']['mtu'] == 9000
@@ -3521,17 +3543,16 @@
           - test_three['interface']['description'] == "Updated test100-vm"
           - test_three['interface']['mode'] == 200
           - test_three['interface']['untagged_vlan'] == 1
-          - test_three['interface']['tagged_vlans'][0] == 2
-          - test_three['interface']['tagged_vlans'][1] == 3
+          - test_three['interface']['tagged_vlans'] == [2, 3]
           - test_three['interface']['tags'][0] == "Schnozzberry"
-          - test_three['msg'] == "interface Eth0 updated"
+          - test_three['msg'] == "interface Eth10 updated"
 
     - name: "NETBOX_VM_INTERFACE 4: ASSERT - Delete"
       netbox_vm_interface:
         netbox_url: http://localhost:32768
         netbox_token: 0123456789abcdef0123456789abcdef01234567
         data:
-          name: "Eth0"
+          name: "Eth10"
           virtual_machine: "test100-vm"
         state: absent
       register: test_four
@@ -3540,9 +3561,58 @@
       assert:
         that:
           - test_four is changed
-          - test_four['interface']['name'] == "Eth0"
+          - test_four['interface']['name'] == "Eth10"
           - test_four['interface']['virtual_machine'] == 1
-          - test_four['msg'] == "interface Eth0 deleted"
+          - test_four['msg'] == "interface Eth10 deleted"
+
+    - name: "NETBOX_VM_INTERFACE 5: Attempt to update interface with same name on other VMs"
+      netbox_vm_interface:
+        netbox_url: http://localhost:32768
+        netbox_token: 0123456789abcdef0123456789abcdef01234567
+        data:
+          virtual_machine: "test100-vm"
+          name: "Eth0"
+          enabled: false
+          mtu: 9000
+          mac_address: "00:00:00:AA:AA:01"
+          description: "Updated test100-vm Eth0 intf"
+          mode: Tagged
+          untagged_vlan:
+            name: Wireless
+            site: Test Site
+          tagged_vlans:
+            - name: Data
+              site: Test Site
+            - name: VoIP
+              site: Test Site
+          tags:
+            - Schnozzberry
+        state: present
+      register: test_five
+
+    - name: "NETBOX_VM_INTERFACE 5: ASSERT - Updated"
+      assert:
+        that:
+          - test_five is changed
+          - test_five['diff']['after']['enabled'] == false
+          - test_five['diff']['after']['mtu'] == 9000
+          - test_five['diff']['after']['mac_address'] == "00:00:00:AA:AA:01"
+          - test_five['diff']['after']['description'] == "Updated test100-vm Eth0 intf"
+          - test_five['diff']['after']['mode'] == 200
+          - test_five['diff']['after']['untagged_vlan'] == 1
+          - test_five['diff']['after']['tagged_vlans'] == [2, 3]
+          - test_five['diff']['after']['tags'][0] == "Schnozzberry"
+          - test_five['interface']['name'] == "Eth0"
+          - test_five['interface']['virtual_machine'] == 1
+          - test_five['interface']['enabled'] == false
+          - test_five['interface']['mtu'] == 9000
+          - test_five['interface']['mac_address'] == "00:00:00:AA:AA:01"
+          - test_five['interface']['description'] == "Updated test100-vm Eth0 intf"
+          - test_five['interface']['mode'] == 200
+          - test_five['interface']['untagged_vlan'] == 1
+          - test_five['interface']['tagged_vlans'] == [2, 3]
+          - test_five['interface']['tags'][0] == "Schnozzberry"
+          - test_five['msg'] == "interface Eth0 updated"
 ##
 ##
 ### NETBOX_PROVIDER
