--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
   include:
     - name: "Python 3.6 - Netbox 2.5 - Latest PyPi Ansible"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.5 SKIP_START_SCRIPTS=true
+      env: PYTHON_VER=3.6 VERSION=v2.5
       install:
         - cd ..
         # Setup netbox container for integration testing
@@ -31,7 +31,7 @@ matrix:
 
     - name: "Python 3.6 - Netbox Latest - Ansible Devel"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.6 SKIP_STARTUP_SCRIPTS=true
+      env: PYTHON_VER=3.6 VERSION=v2.6
       install:
         - cd ..
         # Setup netbox container for integration testing
