--- a/.travis.yml
+++ b/.travis.yml
@@ -13,21 +13,20 @@ env:
 
 matrix:
   include:
-    - name: "Python 3.6 - Netbox 2.5 - Ansible 2.9"
+    - name: "Python 3.6 - Netbox 2.5 - Latest PyPi Ansible"
       python: 3.6
-      env: PYTHON_VER=3.6 VERSION=v2.5 ANSIBLE_VER=2.9.0
+      env: PYTHON_VER=3.6 VERSION=v2.5
       install:
         - cd ..
         # Setup netbox container for integration testing
         - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
-        - git checkout startup-dcim-interfaces-2.5
         - docker-compose pull
         - docker-compose up -d
         - cd ..
         - pip install -U pip
         - pip install pytest==4.6.5 pytest-mock pytest-xdist jinja2 PyYAML black==19.10b0
-        - pip install pynetbox==4.0.6 cryptography codecov jmespath ansible==$ANSIBLE_VER
+        - pip install pynetbox==4.0.6 cryptography codecov jmespath ansible
 
     - name: "Python 3.6 - Netbox Latest - Ansible Devel"
       python: 3.6
@@ -35,7 +34,7 @@ matrix:
       install:
         - cd ..
         # Setup netbox container for integration testing
-        - git clone https://github.com/netbox-community/netbox-docker.git
+        - git clone https://github.com/FragmentedPacket/netbox-docker.git
         - cd netbox-docker
         - docker-compose pull
         - docker-compose up -d
